# dorm-dash

./: Cargo.toml  README.md  config.json
src/: config.rs  main.rs
src/data/: mod.rs  rss.rs  twitter.rs
src/data/weather/: api.rs  model.rs
src/ui/: clock.rs  mod.rs  notification_feed.rs  utils.rs  weather.rs
src/ui/components/: clock.rs  log.rs  mod.rs  notification_feed.rs  weather.rs
