[package]
name = "dorm-dash"
publish = false
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/ewpratten/dorm-dash"
repository = "https://github.com/ewpratten/dorm-dash"
license = "GPL-3.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tui = "0.16"
termion = "1.5"
easy_rss = "1.0"
autojson = "0.1"
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
figlet-rs = "0.1"
ansi-to-tui = "0.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
itertools = "0.10"